--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brainnest JS-1 assignment</title>
   <link rel="stylesheet" href="./style.css">
-  <script rel="" src="./script.js" defer></script>
+  <script src="./script.js" defer></script>
 </head>
 <body>
 </body>
